# sonar2csv_shape

./: .gitattributes  .gitignore  LICENSE  README.md  __VERSION__.py  cmdline.html  cmdline.html.md  convert.html  convert.html.md  core.html  core.html.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  setup.cfg  sitemap.xml  web.html  web.html.md  webgui.html  webgui.html.md
.github/workflows/: test.yaml
.windsurf/rules/: fasthtml.md  nbdev.md
nbs/: .sesskey  00_convert.ipynb  00_core.ipynb  01_cline.ipynb  01_cmdline.ipynb  01_convert.ipynb  02_web.ipynb  02_webgui.ipynb  02_webgui_dup1.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
pipelines/: publish_python_package.yml
site_libs/bootstrap/: bootstrap-60046beead0f13eb161ed302c8ce70d4.min.css
sonar2csv_shape/: __init__.py  _modidx.py  cmdline.py  convert.py  core.py  web.py  webgui.py
src/: _modidx.py  convert.py  core.py
src/sonar2csv_shape/: __init__.py
test/: download_test.md
